# OGP-Changer

./: INSTALL.desktop  README.md  UNINSTALL.desktop
scripts/: install_so.py  installation_script.py  launch_uninstall.py  uninstall_script.py  utils.py
src/: CMakeLists.txt  cogp.cpp  ogp_changer.cpp  ogp_changer_plugin.cpp  ogp_changer_plugin.json
